added json content type on headers

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth0-eng-camp-exercise",
+  "name": "oauth-challenge",
   "version": "1.0.0",
   "description": "Exercise to be solved by Camp applicants",
   "scripts": {
