added travis script to run utils

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ go:
 before_install:
   - go get -t -v ./...
 
-script: go test -race -coverprofile=coverage.txt -covermode=atomic
+script: 
+  - go test -v -race -coverprofile=coverage.txt -covermode=atomic
+  - go test -v -race -coverprofile=coverage.txt -covermode=atomic ./countutils
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
