--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ before_install:
   - go get -t -v ./...
 
 script: 
-  - go test -v -race -coverprofile=coverage.txt -covermode=atomic
-  - go test -v -race -coverprofile=coverage.txt -covermode=atomic ./countutils
+  - echo 'mode: atomic' > coverage.txt && go list ./... | xargs -n1 -I{} sh -c 'go test -covermode=atomic -coverprofile=coverage.tmp {} && tail -n +2 coverage.tmp >> coverage.txt' && rm coverage.tmp
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
